fastrace-macro/tests/ui/err/has-ident-arguments.stderr
error: expected `=`
 --> tests/ui/err/has-ident-arguments.rs:5:10
  |
5 | #[trace(a, b)]
  |          ^
